# umba_tokenizer

./: .gitignore  .md-pp.base.options  CMakeLists.txt  README.md  _gen-doc-wlog.bat  _gen-doc.bat  _precommit.bat  doxy.bat  dummy.cpp  umba-brief-scanner.rsp  umba-mm-module-info.xml
.config/: doxygen_common.cfg  doxygen_dokbook.cfg  doxygen_html.cfg  doxygen_latex.cfg  doxygen_man.cfg  doxygen_rtf.cfg
doc/: Index.md  dummy.txt  links.txt  sources.md  sources.md_
doc/_md/: _found-attentions.md  _found-notes.md  _found-todos.md  _found-warnings.md  sources_brief.md_
inc/: dummy.h
inc/umba/: c_char_class.h  c_char_class_table.h.inc  c_tokenizer.h  c_tokenizer_constants.h  char_class.h  char_class_table.h.inc  tokenizer.h
inc/umba/tokenizer/: defs.h  enums.h  parser_base.h  string_literal_parsing.h  todo.md  todo.md_  token_collection.h  token_collection.md  token_collection.md_  token_filters.h  tokenizer.h  tokenizer_base.h  tokenizer_builder.h  tokenizer_function_handlers.h  tokenizer_log.h  tokenizer_log_console.h  tokenizer_options.h  tpl.h  trie_builder.h  types.h  utils.h
inc/umba/tokenizer/_enums/: ParserWaitForTokenFlags.txt  _generate_all.bat  umba-enum-gen-options.txt
inc/umba/tokenizer/_generators/: ParserWaitForTokenFlags.txt
inc/umba/tokenizer/filters/: cc_preprocessor_filter.h  dbl_square_brackets_composing_filters.h  filter_base.h  identifier_to_keyword_conversion_filter.h  kebab_case_composing_filter.h  raw_chars_collecting_filter.h  repeated_token_composing_filter.h  simple_pass_trough_filter.h  simple_replace_filter.h  simple_sequence_composing_filter.h  simple_suffix_gluing_filter.h  token_collecting_filter.h  token_range_conversion_filter.h  unclassified_chars_collecting_filter.h
inc/umba/tokenizer/lang/: cpp.h  marmaid_packet_beta.h  marmaid_packet_diagram.h  marmaid_packet_diagram_tokens.h  mermaid_packet_diagram.h  mermaid_packet_diagram_tokens.h  plantuml.h
inc/umba/tokenizer/lexers/: cpp.h  mermaid_packet_diagram.h  plantuml.h  ufsm.h  ufsm_sample.ufsm  ufsm_tokens.h  usketch_tokenizer.h  usketch_tokens.h
inc/umba/tokenizer/parsers/: marmaid_packet_diagram_cpp.h  marmaid_packet_diagram_enums.h  marmaid_packet_diagram_parser.h  marmaid_packet_diagram_parser_types.h  mermaid_packet_diagram_cpp.h  mermaid_packet_diagram_enums.h  mermaid_packet_diagram_parser.h  mermaid_packet_diagram_parser_types.h  parser_base.h  parser_base2.h  parser_template.h  usketch_parser.h  usketch_parser_types.h  utils.h
inc/umba/tokenizer/parsers/_enums/: MermaidPacketDiagramDisplayOptionFlags.txt  MermaidPacketDiagramDisplayOptions.txt  _generate_all.bat  _generate_all_wlog.bat
inc/umba/tokenizer/parsers/_generators/: MarmaidPacketDiagramDisplayOptionFlags.txt  MarmaidPacketDiagramDisplayOptions.txt  MarmaidPacketDiagramType.txt  MermaidPacketDiagramDisplayOptionFlags.txt  MermaidPacketDiagramMemoryModel.txt  MermaidPacketDiagramParsingOptions.txt  _generate_all.bat
inc/umba/tokenizer/parsers/mermaid/: packet_diagram_cpp.h  packet_diagram_enums.h  packet_diagram_parser.h  packet_diagram_parser_types.h
inc/umba/tokenizer/parsers/protobuf/doc.notes/: TODO.md  links.md  scalar.md  scalar.md_
inc/umba/tokenizer/parsers/ufsm/: .gitignore  basic_typedefs.h  basic_types.h  basic_types.md  basic_types.md_  enums.h  exceptions.h  inserters.h  parser.h  parser_types.h  todo.md  todo.md_  types.h
inc/umba/tokenizer/parsers/ufsm/_enums/: ActionFlags.txt  EventFlags.txt  FullQualifiedNameFlags.txt  InheritanceListMode.txt  InheritanceOverrideFlags.txt  NamespaceEntryKind.txt  ParentListEntryFlags.txt  PredicateCharClass.txt  PredicateFlags.txt  StateActionKind.txt  StateFlags.txt  StateMachineFlags.txt  TransitionFlags.txt  _generate_all.bat
inc/umba/tokenizer/parsers/ufsm/_generators/: ActionFlags.txt  InheritanceOverrideFlags.txt  PredicateFlags.txt  StateActions.txt  StateFlags.txt  TransitionEventFlags.txt  _generate_all.bat  enums.rsp  umba-enum-gen-options.txt
inc/umba/tokenizer/parsers/ufsm/impl/: basic_types.h  types.h
inc/umba/tokenizer/parsers/ufsm/md_/: 01_EventDefinition.md_  02_ActionDefinition.md_  03_PredicateDefinition.md_  04_TransitionSourceState.md_  05_TransitionEvent.md_  05_TransitionSourceStates.md_  06_TransitionEvent.md_  06_TransitionSourceState.md_  07_TransitionEvents.md_  08_TransitionDefinition.md_  08_TransitionEvents.md_  09_StateActionRefs.md_  10_StateDefinition.md_  TODO.md  basic_types.md_  transitions.md_  types.md_
inc/umba/tokenizer/parsers/ufsm/samples/: binr.ufsm  concept.ufsm  http.md  http.ufsm  ideas.md  modbus.ufsm  nmea.ufsm  protocols.md  sirf.md  sirf.ufsm  templating.md  traffic_lights.ufsm  transitions.md  trimble.ufsm
md_/: misc.txt  readme.txt
md_/src-stat/: stat-by-percent.md_  stat-by-percent.txt  stat.md_  stat.txt
